--- a/DotNet/Aula_2017_11_02/Aula_2017_11_02.csproj
+++ b/DotNet/Aula_2017_11_02/Aula_2017_11_02.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1E13F19-C30A-4F22-A0B5-2894A3251F97}</ProjectGuid>
+    <ProjectGuid>{BB3CD876-FB35-4FB0-9482-B6995FD35C94}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Aula_2017_10_30</RootNamespace>
-    <AssemblyName>Aula_2017_10_30</AssemblyName>
+    <RootNamespace>Aula_2017_11_02</RootNamespace>
+    <AssemblyName>Aula_2017_11_02</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,19 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Lock_free\Semaphore.cs" />
+    <Compile Include="LFStack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\LFStackTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SynchUtils\Utils.csproj">
-      <Project>{64e1f09e-c0ff-469d-bcbf-29add1e0e89b}</Project>
-      <Name>Utils</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
