--- a/DotNet/Aula_2017_11_23/Aula_2017_11_23.csproj
+++ b/DotNet/Aula_2017_11_23/Aula_2017_11_23.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{104A2FFC-84A7-473E-ACC5-391ECB88EEF1}</ProjectGuid>
+    <ProjectGuid>{5388E9D2-08B6-4976-8DED-925E3D0ABE47}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Aula_2017_11_20</RootNamespace>
-    <AssemblyName>Aula_2017_11_20</AssemblyName>
+    <RootNamespace>Aula_2017_11_23</RootNamespace>
+    <AssemblyName>Aula_2017_11_23</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleFuture.cs" />
+    <Compile Include="SortUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
