--- a/DotNet/Aula_2017_11_27/Aula_2017_11_27.csproj
+++ b/DotNet/Aula_2017_11_27/Aula_2017_11_27.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{104A2FFC-84A7-473E-ACC5-391ECB88EEF1}</ProjectGuid>
+    <ProjectGuid>{113F78E0-B97B-4931-8026-5C8FA50009CF}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Aula_2017_11_20</RootNamespace>
-    <AssemblyName>Aula_2017_11_20</AssemblyName>
+    <RootNamespace>Aula_2017_11_27</RootNamespace>
+    <AssemblyName>Aula_2017_11_27</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,9 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TaskUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleFuture.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
