--- a/DotNet/Aula_2017_11_30/Aula_2017_11_30.csproj
+++ b/DotNet/Aula_2017_11_30/Aula_2017_11_30.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{104A2FFC-84A7-473E-ACC5-391ECB88EEF1}</ProjectGuid>
+    <ProjectGuid>{B497935B-727E-4D08-A428-B311477B041F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Aula_2017_11_20</RootNamespace>
-    <AssemblyName>Aula_2017_11_20</AssemblyName>
+    <RootNamespace>Aula_2017_11_30</RootNamespace>
+    <AssemblyName>Aula_2017_11_30</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncUtils.cs" />
+    <Compile Include="GenericAsyncResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleFuture.cs" />
+    <Compile Include="ServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
