--- a/DotNet/Aula_2017_12_04/Aula_2017_12_04.csproj
+++ b/DotNet/Aula_2017_12_04/Aula_2017_12_04.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4724F7F6-4215-46B3-BB7B-BD274DA54583}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{649D32DF-F374-48FB-BEA0-E6546264EC7C}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ShowImages</RootNamespace>
-    <AssemblyName>ShowImages</AssemblyName>
+    <RootNamespace>Aula_2017_12_04</RootNamespace>
+    <AssemblyName>Aula_2017_12_04</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -39,55 +39,22 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Model.cs" />
+    <Compile Include="AsyncEnumerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
+    <Compile Include="TaskUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Aula_2017_11_30\Aula_2017_11_30.csproj">
-      <Project>{b497935b-727e-4d08-a428-b311477b041f}</Project>
-      <Name>Aula_2017_11_30</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Aula_2017_12_04\Aula_2017_12_04.csproj">
-      <Project>{649d32df-f374-48fb-bea0-e6546264ec7c}</Project>
-      <Name>Aula_2017_12_04</Name>
+    <ProjectReference Include="..\Aula_2017_11_27\Aula_2017_11_27.csproj">
+      <Project>{113f78e0-b97b-4931-8026-5c8fa50009cf}</Project>
+      <Name>Aula_2017_11_27</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
